--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-     <p>Мой первый сайт</p>
+  <h1>ООО "Почта России"</h1>
+    <p>Телефон +7(495)95620-67</p>
 </body>
 
 </html>
