--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-     <meta charset="utf-8">
-     <title>Мой первый сайт</title>
-
-</head>
-
 <body>
-  <h1>ООО "Почта России"</h1>
-    <p>Телефон +7(495)95620-67</p>
+     <header>
+             <div> app.creation </div>
+             <nav>
+                  <a> start </a>
+                  <a> services </a>
+                  <a> about </a>
+                  <a> blog </a>
+                  <a> contact us </a>
+            </nav>
+     </header>
+     <section>
+             <main>
+                   <h> Building an App Without Design Expertise? </h>
+                   <p> I help tech startups design better digital products without hiring a full-time designer </p>
+                   <button> Schedule free consultation </button>
+             </main>
+             <div>
+                  <img>
+            </div>
+     </section>
 </body>
-
-</html>
