--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>app.creation</title>
+  <link rel="stylesheet" href="<style.css">
+    </head>
 <body>
      <header>
              <div> app.creation </div>
@@ -20,3 +27,4 @@
             </div>
      </section>
 </body>
+</html>
