--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -7,20 +7,20 @@
     </head>
 <body>
      <header>
-             <div> app.creation </div>
+             <div>app.creation</div>
              <nav>
-                  <a> start </a>
-                  <a> services </a>
-                  <a> about </a>
-                  <a> blog </a>
-                  <a> contact us </a>
+                  <a>start</a>
+                  <a>services</a>
+                  <a>about</a>
+                  <a>blog</a>
+                  <a>contact us</a>
             </nav>
      </header>
      <section>
              <main>
-                   <h> Building an App Without Design Expertise? </h>
-                   <p> I help tech startups design better digital products without hiring a full-time designer </p>
-                   <button> Schedule free consultation </button>
+                   <h>Building an App Without Design Expertise?</h>
+                   <p>I help tech startups design better digital products without hiring a full-time designer</p>
+                   <button>Schedule free consultation</button>
              </main>
              <div>
                   <img>
